opam-version: "2.0"
name: "remove-sharpuse"
version: "0.1"
synopsis: "A utility to expand #use in OCaml programs"
description: """
A utility to expand #use in OCaml programs
"""
maintainer: "Kenichi Asai <asai@is.ocha.ac.jp>"
authors: "Kenichi Asai <asai@is.ocha.ac.jp>"
license: "MIT"
homepage: "https://github.com/kenichi-asai/remove-sharpuse"
depends: [ "ocaml" "ocamlfind" "dune" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
